[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_1_opt"
path = "src/day_1_opt.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5.rs"

[dependencies]
once_cell = "1.18.0"
